--- a/src/pages/debts-detail/debts-detail.html
+++ b/src/pages/debts-detail/debts-detail.html
@@ -88,7 +88,7 @@
                     </p>
                     <ion-row class="buttons-debt-card">
                         <ion-col>
-                            <button ion-button icon-left clear small>
+                            <button ion-button icon-left clear small (click)="removeDebtEvent(debt)">
                                 <ion-icon name="trash"></ion-icon>
                                 Eliminar
                             </button>
