--- a/src/pages/sales-historic/sales-historic.html
+++ b/src/pages/sales-historic/sales-historic.html
@@ -17,7 +17,7 @@
 
             <!-- id Column -->
             <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
                 <mat-cell *matCellDef="let sale"> {{sale.id}} </mat-cell>
             </ng-container>
     
