--- a/src/pages/sales-historic/sales-historic.html
+++ b/src/pages/sales-historic/sales-historic.html
@@ -69,7 +69,7 @@
             </ng-container>
     
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" (press)="removeSaleEvent(row)"></mat-row>
         </mat-table>
     </div>
 
