Sort items after updating name

--- a/src/pages/debts-detail/debts-detail.html
+++ b/src/pages/debts-detail/debts-detail.html
@@ -30,13 +30,13 @@
                     </ion-badge>
                 </ion-item>
 
-                <ion-item>
+                <!-- <ion-item>
                     <ion-icon name='stats' item-start style="color: #efb24f"></ion-icon>
                     Total deuda
                     <ion-badge item-end>
                         {{sumValues | currency:'COP':'symbol-narrow':'1.0'}}
                     </ion-badge>
-                </ion-item>
+                </ion-item> -->
 
                 <ion-item>
                     <ion-icon name='thumbs-up' item-start style="color: #e8cda8"></ion-icon>
