--- a/src/pages/home-main/home-main.html
+++ b/src/pages/home-main/home-main.html
@@ -6,11 +6,15 @@
 
 
 <ion-content>
+
+    <ion-fab bottom right>
+        <button ion-fab (click)="createCustomSale()"><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
+
     <ion-grid>
         <ion-row>
-            <ion-col col-4></ion-col>
-            <ion-col col-4></ion-col>
-            <ion-col col-4>
+            <ion-col col-6></ion-col>
+            <ion-col col-6>
                 <ion-toolbar class="toolb">
                     <ion-title>Carrito de ventas</ion-title>
                     <ion-buttons end>
@@ -19,7 +23,7 @@
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
-                <ion-note *ngIf="selectedItems.length==0">
+                <ion-note *ngIf="selectedItems.length==0 && customItems.length==0">
                     No hay items para mostrar.
                 </ion-note>
                 <ion-list>
@@ -31,7 +35,7 @@
                         <p>
                             {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
                         </p>
-                        <ion-note item-end *ngIf="true">                            
+                        <ion-note item-end>                            
                             <button ion-button icon-only round clear small (tap)="increaseItem(item)">
                                 <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
@@ -40,13 +44,36 @@
                                 <ion-icon name="remove-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                         </ion-note>
-                        <ion-note item-end *ngIf="true">
+                        <ion-note item-end>
                             {{(item.price * item.nSelected) | currency:'COP':'symbol-narrow':'1.0'}}<br>
                             x{{item.nSelected}}
                         </ion-note>
                     </ion-item>
+
+                    <!-- Custom items -->
+                    <ion-item *ngFor="let item of customItems; let idx = index"
+                        class="item-shoping-cart"
+                        (swipe)="swipeEventCustom(item, idx)">
+                        <h2>Item {{idx + 1}}</h2>
+                        <p>
+                            {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
+                        </p>
+                        <ion-note item-end>                            
+                            <button ion-button icon-only round clear small (tap)="increaseCustomItem(item)">
+                                <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
+                            </button>
+                            <br>
+                            <button ion-button icon-only round clear small (tap)="decreaseCustomItem(item)">
+                                <ion-icon name="remove-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
+                            </button>
+                        </ion-note>
+                        <ion-note item-end>
+                            {{(item.price * item.nSelected) | currency:'COP':'symbol-narrow':'1.0'}}<br>
+                            x{{item.nSelected}}
+                        </ion-note>                        
+                    </ion-item>
                 </ion-list>
-                <div *ngIf="selectedItems.length!=0">
+                <div *ngIf="selectedItems.length!=0 || customItems.length!=0">
                     <ion-list inset>
                         <ion-item>
                             <ion-label>Crédito</ion-label>
