--- a/src/pages/home-main/home-main.html
+++ b/src/pages/home-main/home-main.html
@@ -8,7 +8,7 @@
 <ion-content>
 
     <ion-fab bottom right>
-        <button ion-fab (click)="createCustomSale()"><ion-icon name="add"></ion-icon></button>
+        <button ion-fab (click)="createCustomSale()"><ion-icon name="cube"></ion-icon></button>
     </ion-fab>
 
     <ion-grid>
@@ -77,7 +77,7 @@
                     <ion-list inset>
                         <ion-item>
                             <ion-label>Crédito</ion-label>
-                            <ion-checkbox [(ngModel)]="credit" (ionChange)="toggleCredit()"></ion-checkbox>
+                            <ion-checkbox [(ngModel)]="credit"></ion-checkbox><!-- (ionChange)="toggleCredit()" -->
                         </ion-item>
                         <div *ngIf="credit">
                             <ion-item>
